--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ nav ul li a:hover{
     min-width:300px;
     margin-top: 30px;
     margin-right: 600px;
+    position:relative;
 }
 .sec2 h1{
         font-size: 50px;
@@ -54,8 +55,10 @@ nav ul li a:hover{
 }
 .header{
     background: url('banner1.jpg') no-repeat top center;
-    background-size:cover;
+    background-size:1350px;
     height:100vh;
+    
+    
 }
 .menu-icon{
      width:30px;
@@ -72,13 +75,16 @@ nav ul li a:hover{
      
 } 
 .categories{
-    margin-top:80px;
+    margin-top:80px;   
+    max-width:1400px;
+    margin: 70px auto;    
+
 }
  
 .column{
     flex-basis: 30%;
     max-width: 1400px;
-    margin-bottom: 30px;
+    
 }
 .column img{
             width:100%;
@@ -259,7 +265,7 @@ list-style-type:none;
                 color:#fcffff;
 }
 .column-fot4 a:hover{
-                color:#dbff3b;
+                color:#f147e8;
 }
 /*contact us*/
 .contact-2{
@@ -273,6 +279,8 @@ list-style-type:none;
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;	 
+    max-width:1400px;
+    margin:auto;  
 }
 @keyframes gradient {
 	0% {
@@ -455,8 +463,46 @@ list-style-type:none;
          margin-left:380px;
           
      }
+     
+     
 }
 
+.social{
+        width: 1400px;
+        height: 50vh;
+        text-align: center;
+        max-width:1400px;
+        margin:auto;  
+        background: black;
+        
+        
+}
+.social h1{
+            font-weight:lighter;
+            font-size:60px;
+            color:aquamarine;
+            
+            padding-top:30px;
+            margin-bottom: 0;
+
+}
+.social ul li{
+                display: inline-block;
+                margin:30px 30px;
+                font-size: 30px;
+                padding:11px 13px;
+                color:#f3946f;
+                border:1px solid #8a8a8a;
+                border-radius: 50%;
+                list-style: none;
+}
+.social ul li i{
+    color:aquamarine;
+}
+.social ul li i:hover{
+                        color:#ff523b;
+                        
+}
  
 
 
